# phd_hunter

./: .buildinfo  .gitignore  PROJECT_SUMMARY.md  README.md  agents.html  api.html  architecture.html  arxiv_demo.py  changelog.html  claude.md  contributing.html  crawlers.html  frontend.html  genindex.html  index.html  installation.html  integration_test.py  llm.html  main.py  objects.inv  phd_hunter.db  pyproject.toml  reports.html  search.html  searchindex.js
.doctrees/: agents.doctree  api.doctree  architecture.doctree  changelog.doctree  contributing.doctree  crawlers.doctree  environment.pickle  frontend.doctree  index.doctree  installation.doctree  llm.doctree  reports.doctree
.doctrees/__intersphinx_cache__/: requests_objects.inv
.github/workflows/: sphinx.yml
_sources/: agents.rst.txt  api.rst.txt  architecture.rst.txt  changelog.rst.txt  crawlers.rst.txt  index.rst.txt  installation.rst.txt
config/: settings.example.yaml
debug_output/: csrankings_page_99de7d61.html
docs/: requirements.txt
docs/source/: api.rst  architecture.rst  changelog.rst  conf.py  contributing.rst  crawlers.rst  frontend.rst  index.rst  installation.rst  llm.rst  reports.rst
src/phd_hunter/: __init__.py  api.py  database.py  main.py  models.py
src/phd_hunter/agents/: __init__.py  base.py
src/phd_hunter/analyzer/: __init__.py  analyzer.py  prompts.py
src/phd_hunter/api_infra/: README.md  __init__.py  setup.py
src/phd_hunter/api_infra/context/: __init__.py  manager.py
src/phd_hunter/api_infra/core/: __init__.py  client.py
src/phd_hunter/api_infra/tools/: __init__.py  decorator.py
src/phd_hunter/crawlers/: __init__.py  arxiv_crawler.py  base.py  csrankings.py  homepage_crawler.py  openalex_crawler.py
src/phd_hunter/frontend/: app.py  export_data.py  hound_config.example.json  hunt_config.json  index.html  run_server.py
src/phd_hunter/frontend/static/: app.js  styles.css
src/phd_hunter/hound/: __init__.py  prompts.py  scorer.py  scorer_daemon.py
src/phd_hunter/llm/: __init__.py  client.py  prompts.py
src/phd_hunter/utils/: __init__.py  config.py  helpers.py  logger.py  pdf_extract.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_config.py  test_crawlers.py  test_llm.py  test_models.py
